style: fixed code styling issues and changed severity level of checkstyle to error to fail build if styling violations are found
Signed-off-by: Saptarshi Sarkar <saptarshi.programmer@gmail.com>