@@ -1,5 +1,6 @@
 package io.github.SaptarshiSarkar12.k8sattackmap.ingestion;
 
+import org.junit.jupiter.api.Assertions;
 import io.github.SaptarshiSarkar12.k8sattackmap.model.ClusterGraphData;
 import io.github.SaptarshiSarkar12.k8sattackmap.model.EdgeType;
 import io.github.SaptarshiSarkar12.k8sattackmap.model.GraphEdge;
@@ -9,8 +10,6 @@ import org.junit.jupiter.api.Test;
 
 import java.io.StringReader;
 import java.util.List;
-
-import static org.junit.jupiter.api.Assertions.*;
 
 @DisplayName("K8sJsonParser tests")
 class K8sJsonParserTest {
@@ -22,7 +21,7 @@ class K8sJsonParserTest {
         return "{\"items\":[" + String.join(",", itemJson) + "]}";
     }
 
-    private static String pod(String namespace, String name, String extraSpec) {
+    private static String pod(String name, String extraSpec) {
         return """
                {
                  "kind":"Pod",
@@ -30,7 +29,7 @@ class K8sJsonParserTest {
                  "spec":{%s},
                  "status":{}
                }
-               """.formatted(name, namespace, extraSpec);
+               """.formatted(name, "default", extraSpec);
     }
 
     private static String secret(String namespace, String name, String type, boolean hasData) {
@@ -55,7 +54,7 @@ class K8sJsonParserTest {
     }
 
     private static String role(String kind, String namespace, String name, String rulesJson) {
-        String nsField = kind.equals("ClusterRole") ? "" : "\"namespace\":\"%s\",".formatted(namespace);
+        String nsField = "ClusterRole".equals(kind) ? "" : "\"namespace\":\"%s\",".formatted(namespace);
         return """
                {
                  "kind":"%s",
@@ -95,139 +94,139 @@ class K8sJsonParserTest {
     @Test
     @DisplayName("returns null for malformed JSON")
     void returnsNullForMalformedJson() {
-        assertNull(parse("{this is not json"));
+        Assertions.assertNull(parse("{this is not json"));
     }
 
     @Test
     @DisplayName("returns null when items field is missing")
     void returnsNullWhenItemsFieldIsMissing() {
-        assertNull(parse("{\"notItems\":[]}"));
+        Assertions.assertNull(parse("{\"notItems\":[]}"));
     }
 
     @Test
     @DisplayName("returns empty nodes and edges for empty items")
     void returnsEmptyDataForEmptyItems() {
         ClusterGraphData data = parse(items());
-        assertNotNull(data);
-        assertTrue(data.getNodes().isEmpty());
-        assertTrue(data.getEdges().isEmpty());
+        Assertions.assertNotNull(data);
+        Assertions.assertTrue(data.getNodes().isEmpty());
+        Assertions.assertTrue(data.getEdges().isEmpty());
     }
 
     @Test
     @DisplayName("creates node id as type:namespace:name")
     void createsNodeWithExpectedId() {
-        ClusterGraphData data = parse(items(pod("default", "web", "")));
-        assertNotNull(data);
+        ClusterGraphData data = parse(items(pod("web", "")));
+        Assertions.assertNotNull(data);
         GraphNode node = requireNode(data, "Pod:default:web");
-        assertEquals("Pod", node.getType());
-        assertEquals("default", node.getNamespace());
-        assertEquals("web", node.getName());
+        Assertions.assertEquals("Pod", node.getType());
+        Assertions.assertEquals("default", node.getNamespace());
+        Assertions.assertEquals("web", node.getName());
     }
 
     @Test
     @DisplayName("creates one node per item")
     void createsOneNodePerItem() {
         ClusterGraphData data = parse(items(
-                pod("default", "web", ""),
-                pod("default", "api", ""),
+                pod("web", ""),
+                pod("api", ""),
                 secret("default", "db-pass", "Opaque", false)));
-        assertNotNull(data);
-        assertEquals(3, data.getNodes().size());
+        Assertions.assertNotNull(data);
+        Assertions.assertEquals(3, data.getNodes().size());
     }
 
     @Test
     @DisplayName("creates USES_SA edge when pod has serviceAccountName")
     void createsUsesSaEdge() {
-        String podJson = pod("default", "web", "\"serviceAccountName\":\"app-sa\"");
+        String podJson = pod("web", "\"serviceAccountName\":\"app-sa\"");
         ClusterGraphData data = parse(items(podJson, serviceAccount("default", "app-sa", null)));
-        assertNotNull(data);
-        assertTrue(hasEdge(data, "Pod:default:web", "ServiceAccount:default:app-sa", EdgeType.USES_SA));
+        Assertions.assertNotNull(data);
+        Assertions.assertTrue(hasEdge(data, "Pod:default:web", "ServiceAccount:default:app-sa", EdgeType.USES_SA));
     }
 
     @Test
     @DisplayName("creates MOUNTS_SECRET edge only when secret volume is mounted")
     void createsMountsSecretEdgeOnlyForMountedVolume() {
-        String mountedPod = pod("default", "web", """
+        String mountedPod = pod("web", """
                 "volumes":[{"name":"creds","secret":{"secretName":"db-pass"}}],
                 "containers":[{"name":"app","image":"app:1.0","volumeMounts":[{"name":"creds","mountPath":"/creds"}]}]
                 """);
         ClusterGraphData mountedData = parse(items(mountedPod, secret("default", "db-pass", "Opaque", true)));
-        assertNotNull(mountedData);
-        assertTrue(hasEdge(mountedData, "Pod:default:web", "Secret:default:db-pass", EdgeType.MOUNTS_SECRET));
+        Assertions.assertNotNull(mountedData);
+        Assertions.assertTrue(hasEdge(mountedData, "Pod:default:web", "Secret:default:db-pass", EdgeType.MOUNTS_SECRET));
 
-        String unmountedPod = pod("default", "web", """
+        String unmountedPod = pod("web", """
                 "volumes":[{"name":"creds","secret":{"secretName":"db-pass"}}],
                 "containers":[{"name":"app","image":"app:1.0","volumeMounts":[]}]
                 """);
         ClusterGraphData unmountedData = parse(items(unmountedPod, secret("default", "db-pass", "Opaque", true)));
-        assertNotNull(unmountedData);
-        assertFalse(unmountedData.getEdges().stream().anyMatch(e -> e.getRelationship() == EdgeType.MOUNTS_SECRET));
+        Assertions.assertNotNull(unmountedData);
+        Assertions.assertFalse(unmountedData.getEdges().stream().anyMatch(e -> e.getRelationship() == EdgeType.MOUNTS_SECRET));
     }
 
     @Test
     @DisplayName("creates environment reference edges for envFrom and valueFrom")
     void createsEnvironmentReferenceEdges() {
-        String envFromCmPod = pod("default", "web", """
+        String envFromCmPod = pod("web", """
                 "containers":[{"name":"app","image":"app:1.0","envFrom":[{"configMapRef":{"name":"app-cfg"}}]}]
                 """);
         ClusterGraphData envFromCmData = parse(items(envFromCmPod));
-        assertNotNull(envFromCmData);
-        assertTrue(hasEdge(envFromCmData, "Pod:default:web", "ConfigMap:default:app-cfg", EdgeType.USES_CONFIGMAP));
+        Assertions.assertNotNull(envFromCmData);
+        Assertions.assertTrue(hasEdge(envFromCmData, "Pod:default:web", "ConfigMap:default:app-cfg", EdgeType.USES_CONFIGMAP));
 
-        String envFromSecretPod = pod("default", "web", """
+        String envFromSecretPod = pod("web", """
                 "containers":[{"name":"app","image":"app:1.0","envFrom":[{"secretRef":{"name":"api-key"}}]}]
                 """);
         ClusterGraphData envFromSecretData = parse(items(envFromSecretPod));
-        assertNotNull(envFromSecretData);
-        assertTrue(hasEdge(envFromSecretData, "Pod:default:web", "Secret:default:api-key", EdgeType.USES_SECRET));
+        Assertions.assertNotNull(envFromSecretData);
+        Assertions.assertTrue(hasEdge(envFromSecretData, "Pod:default:web", "Secret:default:api-key", EdgeType.USES_SECRET));
 
-        String valueFromSecretPod = pod("default", "web", """
+        String valueFromSecretPod = pod("web", """
                 "containers":[{"name":"app","image":"app:1.0",
                   "env":[{"name":"DB_PASS","valueFrom":{"secretKeyRef":{"name":"db-secret","key":"password"}}}]}]
                 """);
         ClusterGraphData valueFromSecretData = parse(items(valueFromSecretPod));
-        assertNotNull(valueFromSecretData);
-        assertTrue(hasEdge(valueFromSecretData, "Pod:default:web", "Secret:default:db-secret", EdgeType.ENV_FROM_SECRET));
+        Assertions.assertNotNull(valueFromSecretData);
+        Assertions.assertTrue(hasEdge(valueFromSecretData, "Pod:default:web", "Secret:default:db-secret", EdgeType.ENV_FROM_SECRET));
 
-        String valueFromCmPod = pod("default", "web", """
+        String valueFromCmPod = pod("web", """
                 "containers":[{"name":"app","image":"app:1.0",
                   "env":[{"name":"LOG_LEVEL","valueFrom":{"configMapKeyRef":{"name":"app-cfg","key":"logLevel"}}}]}]
                 """);
         ClusterGraphData valueFromCmData = parse(items(valueFromCmPod));
-        assertNotNull(valueFromCmData);
-        assertTrue(hasEdge(valueFromCmData, "Pod:default:web", "ConfigMap:default:app-cfg", EdgeType.ENV_FROM_CONFIGMAP));
+        Assertions.assertNotNull(valueFromCmData);
+        Assertions.assertTrue(hasEdge(valueFromCmData, "Pod:default:web", "ConfigMap:default:app-cfg", EdgeType.ENV_FROM_CONFIGMAP));
     }
 
     @Test
     @DisplayName("creates node-related edges and synthetic node for scheduled pod")
     void createsNodeRelatedEdgesAndSyntheticNode() {
-        String privilegedPod = pod("default", "evil", """
+        String privilegedPod = pod("evil", """
                 "nodeName":"worker-1",
                 "containers":[{"name":"c","image":"img:1","securityContext":{"privileged":true}}]
                 """);
         ClusterGraphData privilegedData = parse(items(privilegedPod));
-        assertNotNull(privilegedData);
-        assertTrue(hasEdge(privilegedData, "Pod:default:evil", "Node:cluster-scoped:worker-1", EdgeType.NODE_ESCAPE));
+        Assertions.assertNotNull(privilegedData);
+        Assertions.assertTrue(hasEdge(privilegedData, "Pod:default:evil", "Node:cluster-scoped:worker-1", EdgeType.NODE_ESCAPE));
 
-        String hostPathPod = pod("default", "hp-pod", """
+        String hostPathPod = pod("hp-pod", """
                 "nodeName":"worker-1",
                 "volumes":[{"name":"host","hostPath":{"path":"/etc"}}],
                 "containers":[{"name":"c","image":"img:1","volumeMounts":[{"name":"host","mountPath":"/host"}]}]
                 """);
         ClusterGraphData hostPathData = parse(items(hostPathPod));
-        assertNotNull(hostPathData);
-        assertTrue(hasEdge(hostPathData, "Pod:default:hp-pod", "Node:cluster-scoped:worker-1", EdgeType.HOST_PATH_ACCESS));
+        Assertions.assertNotNull(hostPathData);
+        Assertions.assertTrue(hasEdge(hostPathData, "Pod:default:hp-pod", "Node:cluster-scoped:worker-1", EdgeType.HOST_PATH_ACCESS));
 
-        String pod1 = pod("default", "pod-a",
+        String pod1 = pod("pod-a",
                 "\"nodeName\":\"worker-2\",\"containers\":[{\"name\":\"c\",\"image\":\"img:1\",\"securityContext\":{\"privileged\":true}}]");
-        String pod2 = pod("default", "pod-b",
+        String pod2 = pod("pod-b",
                 "\"nodeName\":\"worker-2\",\"containers\":[{\"name\":\"c\",\"image\":\"img:1\",\"securityContext\":{\"privileged\":true}}]");
         ClusterGraphData dedupData = parse(items(pod1, pod2));
-        assertNotNull(dedupData);
+        Assertions.assertNotNull(dedupData);
         long count = dedupData.getNodes().stream()
-                .filter(n -> n.getId().equals("Node:cluster-scoped:worker-2"))
+                .filter(n -> "Node:cluster-scoped:worker-2".equals(n.getId()))
                 .count();
-        assertEquals(1, count);
+        Assertions.assertEquals(1, count);
     }
 
     @Test
@@ -247,8 +246,8 @@ class K8sJsonParserTest {
                 {"kind":"ReplicaSet","metadata":{"name":"web-rs","namespace":"default"},"spec":{}}
                 """;
         ClusterGraphData data = parse(items(podJson, rsJson));
-        assertNotNull(data);
-        assertTrue(hasEdge(data, "ReplicaSet:default:web-rs", "Pod:default:web-abc", EdgeType.MANAGES));
+        Assertions.assertNotNull(data);
+        Assertions.assertTrue(hasEdge(data, "ReplicaSet:default:web-rs", "Pod:default:web-abc", EdgeType.MANAGES));
     }
 
     @Test
@@ -260,17 +259,17 @@ class K8sJsonParserTest {
         ClusterGraphData saData = parse(items(saBinding,
                 role("Role", "default", "reader", "[]"),
                 serviceAccount("default", "app-sa", null)));
-        assertNotNull(saData);
-        assertTrue(hasEdge(saData, "ServiceAccount:default:app-sa", "Role:default:reader", EdgeType.BOUND_TO));
+        Assertions.assertNotNull(saData);
+        Assertions.assertTrue(hasEdge(saData, "ServiceAccount:default:app-sa", "Role:default:reader", EdgeType.BOUND_TO));
 
         String userBinding = roleBinding("ClusterRoleBinding", "cluster-scoped", "admin-crb",
                 "ClusterRole", "admin",
                 "[{\"kind\":\"User\",\"name\":\"alice\"}]");
         ClusterGraphData userData = parse(items(userBinding, role("ClusterRole", "cluster-scoped", "admin", "[]")));
-        assertNotNull(userData);
-        assertNotNull(requireNode(userData, "User:cluster-scoped:alice"));
-        assertTrue(userData.getEdges().stream().anyMatch(e ->
-                e.getSource().equals("User:cluster-scoped:alice") && e.getRelationship() == EdgeType.BOUND_TO));
+        Assertions.assertNotNull(userData);
+        Assertions.assertNotNull(requireNode(userData, "User:cluster-scoped:alice"));
+        Assertions.assertTrue(userData.getEdges().stream().anyMatch(e ->
+                "User:cluster-scoped:alice".equals(e.getSource()) && e.getRelationship() == EdgeType.BOUND_TO));
     }
 
     @Test
@@ -283,11 +282,11 @@ class K8sJsonParserTest {
                 role("ClusterRole", "cluster-scoped", "view", "[]"),
                 serviceAccount("default", "app-sa", null),
                 serviceAccount("prod", "prod-sa", null)));
-        assertNotNull(allSaData);
+        Assertions.assertNotNull(allSaData);
         long allCount = allSaData.getEdges().stream()
                 .filter(e -> e.getRelationship() == EdgeType.MEMBER_OF)
                 .count();
-        assertEquals(2, allCount);
+        Assertions.assertEquals(2, allCount);
 
         String nsBinding = roleBinding("ClusterRoleBinding", "cluster-scoped", "ns-sa-crb",
                 "ClusterRole", "view",
@@ -296,12 +295,12 @@ class K8sJsonParserTest {
                 role("ClusterRole", "cluster-scoped", "view", "[]"),
                 serviceAccount("default", "app-sa", null),
                 serviceAccount("prod", "prod-sa", null)));
-        assertNotNull(nsData);
+        Assertions.assertNotNull(nsData);
         List<GraphEdge> memberOfEdges = nsData.getEdges().stream()
                 .filter(e -> e.getRelationship() == EdgeType.MEMBER_OF)
                 .toList();
-        assertEquals(1, memberOfEdges.size());
-        assertEquals("ServiceAccount:default:app-sa", memberOfEdges.get(0).getSource());
+        Assertions.assertEquals(1, memberOfEdges.size());
+        Assertions.assertEquals("ServiceAccount:default:app-sa", memberOfEdges.getFirst().getSource());
     }
 
     @Test
@@ -310,26 +309,26 @@ class K8sJsonParserTest {
         String roleJson = role("Role", "default", "secret-creator",
                 "[{\"verbs\":[\"create\"],\"resources\":[\"secrets\"],\"apiGroups\":[\"\"]}]");
         ClusterGraphData roleData = parse(items(roleJson, secret("default", "db-pass", "Opaque", true)));
-        assertNotNull(roleData);
-        assertTrue(hasEdge(roleData, "Role:default:secret-creator", "Secret:default:db-pass", EdgeType.CAN_ACCESS));
+        Assertions.assertNotNull(roleData);
+        Assertions.assertTrue(hasEdge(roleData, "Role:default:secret-creator", "Secret:default:db-pass", EdgeType.CAN_ACCESS));
 
         String readOnlyRole = role("Role", "default", "secret-reader",
                 "[{\"verbs\":[\"get\",\"list\",\"watch\"],\"resources\":[\"secrets\"],\"apiGroups\":[\"\"]}]");
         ClusterGraphData readOnlyData = parse(items(readOnlyRole, secret("default", "db-pass", "Opaque", true)));
-        assertNotNull(readOnlyData);
-        assertFalse(readOnlyData.getEdges().stream().anyMatch(e -> e.getRelationship() == EdgeType.CAN_ACCESS));
+        Assertions.assertNotNull(readOnlyData);
+        Assertions.assertFalse(readOnlyData.getEdges().stream().anyMatch(e -> e.getRelationship() == EdgeType.CAN_ACCESS));
 
         String clusterRoleJson = role("ClusterRole", "cluster-scoped", "secret-patcher",
                 "[{\"verbs\":[\"patch\"],\"resources\":[\"secrets\"],\"apiGroups\":[\"\"]}]");
         ClusterGraphData clusterRoleData = parse(items(clusterRoleJson,
                 secret("default", "secret-a", "Opaque", true),
                 secret("prod", "secret-b", "Opaque", true)));
-        assertNotNull(clusterRoleData);
+        Assertions.assertNotNull(clusterRoleData);
         long edgeCount = clusterRoleData.getEdges().stream()
-                .filter(e -> e.getSource().equals("ClusterRole:cluster-scoped:secret-patcher")
+                .filter(e -> "ClusterRole:cluster-scoped:secret-patcher".equals(e.getSource())
                         && e.getRelationship() == EdgeType.CAN_ACCESS)
                 .count();
-        assertEquals(2, edgeCount);
+        Assertions.assertEquals(2, edgeCount);
     }
 
     @Test
@@ -340,18 +339,18 @@ class K8sJsonParserTest {
         ClusterGraphData data = parse(items(roleJson,
                 secret("default", "allowed-secret", "Opaque", true),
                 secret("default", "other-secret", "Opaque", true)));
-        assertNotNull(data);
+        Assertions.assertNotNull(data);
         List<GraphEdge> canAccessEdges = data.getEdges().stream()
                 .filter(e -> e.getRelationship() == EdgeType.CAN_ACCESS)
                 .toList();
-        assertEquals(1, canAccessEdges.size());
-        assertEquals("Secret:default:allowed-secret", canAccessEdges.get(0).getTarget());
+        Assertions.assertEquals(1, canAccessEdges.size());
+        Assertions.assertEquals("Secret:default:allowed-secret", canAccessEdges.getFirst().getTarget());
     }
 
     @Test
     @DisplayName("extracts pod security facts")
     void extractsPodSecurityFacts() {
-        String podJson = pod("default", "fact-pod", """
+        String podJson = pod("fact-pod", """
                 "hostPID":true,
                 "hostNetwork":true,
                 "volumes":[{"name":"host","hostPath":{"path":"/etc"}}],
@@ -359,15 +358,15 @@ class K8sJsonParserTest {
                   "securityContext":{"privileged":true,"runAsUser":0,"capabilities":{"add":["SYS_ADMIN","NET_ADMIN"]}}}]
                 """);
         ClusterGraphData data = parse(items(podJson));
-        assertNotNull(data);
+        Assertions.assertNotNull(data);
         GraphNode podNode = requireNode(data, "Pod:default:fact-pod");
-        assertTrue(podNode.getSecurityFacts().isPrivilegedContainer());
-        assertTrue(podNode.getSecurityFacts().isHostPID());
-        assertTrue(podNode.getSecurityFacts().isHostNetwork());
-        assertTrue(podNode.getSecurityFacts().isRunAsRoot());
-        assertTrue(podNode.getSecurityFacts().isHostPathMounted());
-        assertTrue(podNode.getSecurityFacts().getAddedCapabilities().contains("sys_admin"));
-        assertTrue(podNode.getSecurityFacts().getAddedCapabilities().contains("net_admin"));
+        Assertions.assertTrue(podNode.getSecurityFacts().isPrivilegedContainer());
+        Assertions.assertTrue(podNode.getSecurityFacts().isHostPID());
+        Assertions.assertTrue(podNode.getSecurityFacts().isHostNetwork());
+        Assertions.assertTrue(podNode.getSecurityFacts().isRunAsRoot());
+        Assertions.assertTrue(podNode.getSecurityFacts().isHostPathMounted());
+        Assertions.assertTrue(podNode.getSecurityFacts().getAddedCapabilities().contains("sys_admin"));
+        Assertions.assertTrue(podNode.getSecurityFacts().getAddedCapabilities().contains("net_admin"));
     }
 
     @Test
@@ -377,7 +376,7 @@ class K8sJsonParserTest {
                 "[{\"verbs\":[\"*\"],\"resources\":[\"pods\"],\"apiGroups\":[\"\"]}]");
         String escalateClusterRole = role("ClusterRole", "cluster-scoped", "escalator",
                 "[{\"verbs\":[\"escalate\"],\"resources\":[\"clusterroles\"],\"apiGroups\":[\"rbac.authorization.k8s.io\"]}]");
-        String podJson = pod("default", "web", "\"serviceAccountName\":\"auto-sa\"");
+        String podJson = pod("web", "\"serviceAccountName\":\"auto-sa\"");
 
         ClusterGraphData data = parse(items(
                 wildcardRole,
@@ -386,24 +385,24 @@ class K8sJsonParserTest {
                 secret("default", "sa-token", "kubernetes.io/service-account-token", false),
                 serviceAccount("default", "auto-sa", true),
                 podJson));
-        assertNotNull(data);
+        Assertions.assertNotNull(data);
 
-        assertTrue(requireNode(data, "Role:default:all-access").getSecurityFacts().isRbacWildcardVerb());
-        assertTrue(requireNode(data, "ClusterRole:cluster-scoped:escalator").getSecurityFacts().isRbacHasEscalate());
-        assertTrue(requireNode(data, "Secret:default:api-key").getSecurityFacts().isCredentialMaterial());
-        assertTrue(requireNode(data, "Secret:default:sa-token").getSecurityFacts().isCredentialMaterial());
-        assertTrue(requireNode(data, "ServiceAccount:default:auto-sa").getSecurityFacts().isServiceAccountTokenAutomount());
-        assertTrue(requireNode(data, "Pod:default:web").getSecurityFacts().isServiceAccountTokenAutomount());
+        Assertions.assertTrue(requireNode(data, "Role:default:all-access").getSecurityFacts().isRbacWildcardVerb());
+        Assertions.assertTrue(requireNode(data, "ClusterRole:cluster-scoped:escalator").getSecurityFacts().isRbacHasEscalate());
+        Assertions.assertTrue(requireNode(data, "Secret:default:api-key").getSecurityFacts().isCredentialMaterial());
+        Assertions.assertTrue(requireNode(data, "Secret:default:sa-token").getSecurityFacts().isCredentialMaterial());
+        Assertions.assertTrue(requireNode(data, "ServiceAccount:default:auto-sa").getSecurityFacts().isServiceAccountTokenAutomount());
+        Assertions.assertTrue(requireNode(data, "Pod:default:web").getSecurityFacts().isServiceAccountTokenAutomount());
     }
 
     @Test
     @DisplayName("populates podCVEIds with one entry per item")
     void populatesPodCveIdsWithOneEntryPerItem() {
         ClusterGraphData data = parse(items(
-                pod("default", "web", ""),
+                pod("web", ""),
                 secret("default", "db-pass", "Opaque", false)));
-        assertNotNull(data);
-        assertNotNull(data.getPodCVEIds());
-        assertEquals(2, data.getPodCVEIds().size());
+        Assertions.assertNotNull(data);
+        Assertions.assertNotNull(data.getPodCVEIds());
+        Assertions.assertEquals(2, data.getPodCVEIds().size());
     }
 }
